--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,18 @@
 </head>
 <body>
   <h1>Welcome to the chat application</h1>
+
+  <script src="/socket.io/socket.io.js"></script>
+  <script>
+    const socket = io()
+
+    socket.on('connect', () => {
+      console.log('Connect to Server')
+    })
+
+    socket.on('disconnect', () => {
+      console.log('Disconnected from server')
+    })
+  </script>
 </body>
 </html>
