--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,15 @@
 <body>
   <h1>Welcome to the chat application</h1>
 
+  <ol id="messages"></ol>
+
+  <form id="message-form">
+    <input type="text" name="message" placeholder="Message">
+    <button>Send</button>
+  </form>
+
   <script src="/socket.io/socket.io.js"></script>
+  <script src="js/libs/jquery.js"></script>
   <script src="js/index.js"></script>
 </body>
 </html>
